--- a/k1.html
+++ b/k1.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <h1>KSIĘGA PIERWSZA<br>GOSPODARSTWO</h1>
 <h2>Treść:</h2>
 <h3>Powrót panicza - Spotkanie się najpierwsze w pokoiku,
