--- a/k3.html
+++ b/k3.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <h1>KSIĘGA TRZECIA<br>UMIZGI</h1>
 <h2>Treść:</h2>
 <h3>Wyprawa Hrabi na sad - Tajemnicza nimfa gęsi pasie -
