--- a/k4.html
+++ b/k4.html
@@ -1,3 +1,4 @@
+	<meta charset="UTF-8">
   <h1>KSIĘGA CZWARTA <br>DYPLOMATYKA I ŁOWY</h1>
   <h2>Treść:</h2>
   <h3>Zjawisko w papilotach budzi Tadeusza - Za późne
