--- a/k6.html
+++ b/k6.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
   <h1>KSIĘGA SZÓSTA<br>ZAŚCIANEK</h1>
   <h2>Treść:</h2>
   <h3>Pierwsze ruchy wojenne zajazdu - Wyprawa Protazego -
