--- a/k7.html
+++ b/k7.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
   <h1>KSIĘGA SIÓDMA<br>RADA</h1>
   <h2>Treść:</h2>
   <h3>Zbawienne rady Bartka, zwanego Prusak - Głos żołnierski Maćka
