--- a/k9.html
+++ b/k9.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
   <h1>KSIĘGA DZIEWIĄTA<br>BITWA</h1>
   <h2>Treść:</h2>
   <h3>O niebezpieczeństwach wynikających z nieporządnego obozowania -
