--- a/k10.html
+++ b/k10.html
@@ -1,4 +1,4 @@
-
+<meta charset="UTF-8">
 <h1>KSIĘGA DZIESIĄTA<br>EMIGRACJA. JACEK</h1>
 <h2>Treść:</h2>
 <h3>Narada tycząca się zabezpieczenia losu zwycięzców - Układy z
