--- a/k11.html
+++ b/k11.html
@@ -1,4 +1,4 @@
-
+<meta charset="UTF-8">
   <h1>KSIĘGA JEDENASTA<br>ROK 1812</h1>
   <h2>Treść:</h2>
   <h3>Wróżby wiosenne - Wkroczenie wojsk - Nabożeństwo - Rehabilitacja
