--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <meta charset="UTF-8"/>
 </head>
 <body>
-<a href="k4.html">Księga 4</a>
-<a href="k8.html">Księga 8</a>
-<a href="k8.html">Księga 10</a>
+	<ul>
+<li><a href="k1.html">Ksiega 1</a></li>
+<li><a href="k2.html">Ksiega 2</a></li>
+<li><a href="k3.html">Ksiega 3</a></li>
+<li><a href="k4.html">Księga 4</a></li>
+<li><a href="k6.html">Ksiega 5</a></li>
+<li><a href="k7.html">Ksiega 6</a></li>
+<li><a href="k8.html">Ksiega 7</a></li>
+<li><a href="k8.html">Księga 8</a></li>
+<li><a href="k9.html">Ksiega 9</a></li>
+<li><a href="k10.html">Księga 10</a></li>
+<li><a href="k11.html">Ksiega 11</a></li>
+<li><a href="k12.html">Ksiega 12</a></li>
+</ul>
+</body>
 </html>
